[package]
name = "benchmarking"
version = "0.1.0"
authors = ["Alex Oprea <alex.oprea@omniatech.io>"]
edition = "2021"


[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0.137", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["json"]}
dotenv = "0.15.0"
config = "0.10.1"
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
slog-json = "2.6.1"
serde_json = "1.0.81"
json = "0.12.4"
rsmq_async = "5.1.2"
redis = { version = "0.20.2", features = ["aio", "connection-manager", "tokio-comp"] }
futures = { version = "0.3.21", features = ["async-await"]}
tokio = { version = "1.18.2", features = ["full"] }
timer = "0.2.0"
rand = "0.8.5"
[dev-dependencies]
serde_json = "1.0.81"
